fixed white space in dashboard user and routing of admin settings to logout button

--- a/travel-management/public/css/home.css
+++ b/travel-management/public/css/home.css
@@ -108,7 +108,7 @@ html, body {
 
 
 main {
-  padding-top: 56px;
+  padding-top: 32px;
 }
 
 
